<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context="com.example.almightyapp.MainActivity" >
	    
    <LinearLayout
        android:id="@+id/grp_Browse_header"
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="8dp"
	    android:paddingRight="8dp"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    
	    android:background="@drawable/browse_header"
        
        android:orientation="horizontal"
        android:saveEnabled="true" > 
	    
	    <Spinner
	        android:id="@+id/spinner_Browse_productManufacturer"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        
	        android:layout_weight="1"
	        android:layout_marginEnd="2dp"
	        android:layout_gravity="center_vertical"
	        
	        android:background="@drawable/background_dark"
	        android:prompt="@string/dd_product_manufacturer"
	        android:spinnerMode="dialog" />
		
	    <Spinner
	        android:id="@+id/spinner_Browse_packagingType"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        
	        android:layout_weight="1"
	        android:layout_marginStart="2dp"
	        android:layout_gravity="center_vertical"
	        
	        android:background="@drawable/background_dark"
	        android:prompt="@string/dd_packaging_type"
	        android:spinnerMode="dialog" />
	    
	    <ImageView
	        android:id="@+id/iv_Browse_reload"
	        android:contentDescription="@string/browse_reload"
	        android:layout_width="44dp"
	        android:layout_height="44dp"
	        
	        android:layout_weight="0"
	        android:layout_marginStart="5dp"
	        android:layout_gravity="center_vertical"
	        
	        android:background="@drawable/background_btn_style"       
	        android:src="@drawable/ic_action_refresh"
	        
	        android:clickable="true"
	        android:scaleType="fitCenter" />
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"    
        android:layout_below="@id/grp_Browse_header" >

	    <ListView
	        android:id="@id/android:list"
	        
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        
	        android:background="#FF222222"
	        android:drawSelectorOnTop="false" />
	
	    <ImageView
	        android:id="@id/android:empty"
	        android:contentDescription="@string/journal_emptyJournal"
	        
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        
	        android:background="#444444"
	        android:src="@drawable/no_products_found"
	        android:scaleType="fitCenter" />
   </RelativeLayout>  
</RelativeLayout>